--- a/docker-compose/pingpong/docker-compose.yaml
+++ b/docker-compose/pingpong/docker-compose.yaml
@@ -1,4 +1,4 @@
-name: troupe-multi
+name: troupe-pingpong-multi
 
 services:
   # The init service generates keys and ids for the services.
@@ -9,23 +9,26 @@ services:
       context: ../key-maker
       dockerfile: key-maker.Dockerfile
     command: > # Create indentities and distribute to the respective services.
-      /bin/sh -c 'mkdir -p echo-server
-                  mkdir -p echo-client
+      /bin/sh -c 'mkdir -p pingpong-dialer
+                  mkdir -p pingpong-listener
                   node /key-maker/mkid.mjs --privkeyfile=keys/relay.priv --idfile=keys/relay.id
-                  node /key-maker/mkid.mjs --outfile=keys/echo-server.json
-                  node /key-maker/mkid.mjs --outfile=keys/echo-client.json
-                  node /key-maker/mkaliases.js --include=keys/echo-server.json --include=keys/echo-client.json --outfile=keys/aliases.json
+                  node /key-maker/mkid.mjs --outfile=keys/pingpong-listener.json
+                  node /key-maker/mkid.mjs --outfile=keys/pingpong-dialer.json
+                  node /key-maker/mkaliases.js --include=keys/pingpong-listener.json\
+                                               --include=keys/pingpong-dialer.json\
+                                               --outfile=keys/aliases.json
                   cp keys/relay.priv /key-maker/relay/
                   cp keys/relay.id /key-maker/relay/
-                  cp keys/relay.id /key-maker/echo-server/
-                  cp keys/echo-server.json /key-maker/echo-server/
-                  cp keys/relay.id /key-maker/echo-client/
-                  cp keys/echo-client.json /key-maker/echo-client/
-                  cp keys/aliases.json /key-maker/echo-client/'
+                  cp keys/relay.id /key-maker/pingpong-listener/
+                  cp keys/pingpong-listener.json /key-maker/pingpong-listener/
+                  cp keys/aliases.json /key-maker/pingpong-listener/
+                  cp keys/relay.id /key-maker/pingpong-dialer/
+                  cp keys/pingpong-dialer.json /key-maker/pingpong-dialer/
+                  cp keys/aliases.json /key-maker/pingpong-dialer/'
     volumes:
       - relay-key:/key-maker/relay
-      - server-key:/key-maker/echo-server
-      - client-key:/key-maker/echo-client
+      - listener-key:/key-maker/pingpong-listener
+      - dialer-key:/key-maker/pingpong-dialer
     restart: no
     
   relay: # Troupe relay service in the compose network.
@@ -43,7 +46,7 @@ services:
       - relay-key:/relay/keys
     command: node relay.mjs
 
-  echo-server:
+  pingpong-listener:
     image: troupe-integrity
     pull_policy: never # Image does not exist on dockerhub.
     build: # Build the image if it does not exist.
@@ -54,14 +57,17 @@ services:
       init: # Only start after keys and ids are created.
         condition: service_completed_successfully
     volumes:
-      - server-key:/Troupe/ids
+      - listener-key:/Troupe/ids
     command: > # Run the echo server. Note the relay has the dns "relay".
       /bin/sh -c '/Troupe/network.sh\
-                  /Troupe/examples/network/echo/echo-server.trp\
-                  --id=ids/echo-server.json\
+                  /Troupe/examples/network/pingpong/zero.trp\
+                  --id=/Troupe/ids/pingpong-listener.json\
+                  --rspawn=true\
+                  --aliases=/Troupe/ids/aliases.json\
+                  --stdiolev={}\
                   --relay=/dns4/relay/tcp/5555/ws/p2p/$(cat ids/relay.id)'
 
-  echo-client:
+  pingpong-dialer:
     image: troupe-integrity
     pull_policy: never # Image does not exist on dockerhub.
     build: # Build the image if it does not exist.
@@ -72,11 +78,11 @@ services:
       init: # Only start after keys and ids are created.
         condition: service_completed_successfully
     volumes:
-      - client-key:/Troupe/ids
+      - dialer-key:/Troupe/ids
     command: > # Run the echo client.
       /bin/sh -c '/Troupe/network.sh\
-                  /Troupe/examples/network/echo/echo-client.trp\
-                  --id=ids/echo-client.json --aliases=ids/aliases.json\
+                  /Troupe/examples/network/pingpong/p2ppingpong.trp\
+                  --id=ids/pingpong-dialer.json --aliases=ids/aliases.json\
                   --relay=/dns4/relay/tcp/5555/ws/p2p/$(cat ids/relay.id)'
     
 networks:
@@ -86,6 +92,6 @@ networks:
 
 volumes:
   relay-key:  # Volume for relay resources.
-  server-key: # Volume for server resources.
-  client-key: # Volume for client resources.
+  dialer-key: # Volume for dialer resources.
+  listener-key: # Volume for listener resources.
     
