--- a/docker-compose/echo/docker-compose.yaml
+++ b/docker-compose/echo/docker-compose.yaml
@@ -29,6 +29,7 @@ services:
     restart: no
     
   relay: # Troupe relay service in the compose network.
+    container_name: relay
     image: troupe-relay
     pull_policy: never # Image does not exist on dockerhub.
     build: # Build the image if it does not exist.
@@ -44,6 +45,7 @@ services:
     command: node relay.mjs
 
   echo-server:
+    container_name: server
     image: troupe-integrity
     pull_policy: never # Image does not exist on dockerhub.
     build: # Build the image if it does not exist.
@@ -62,6 +64,7 @@ services:
                   --relay=/dns4/relay/tcp/5555/ws/p2p/$(cat ids/relay.id)'
 
   echo-client:
+    container_name: client
     image: troupe-integrity
     pull_policy: never # Image does not exist on dockerhub.
     build: # Build the image if it does not exist.
